tests/samples/negative/visibility/private_field_access.ax
module private_field_access;

import samplelib.visibility;

fn main() -> i32 {
    let box = PublicBox {
        value: 1,
        secret: 2,
    };
    return box.secret;
}
